--- a/gb/17/10/10/n9716291.md
+++ b/gb/17/10/10/n9716291.md
@@ -24,31 +24,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10847366.md#1" target="_blank">林辉：燕大西语系四教授 文革三死一疯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935048.md#1">【未解之谜】来自星星的孩子（3）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939474.md#1">【新闻大家谈】李希喊“清理门户”泄习心病？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939622.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试（2022年12月）小班 女生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939307.md#1">【全球新闻】拜登表态竞选连任总统 待正式宣布</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926811.md#1">在Costco购11种食品和日用品 不太实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938935.md#1">CIA局长：习和军方高层怀疑其入侵台湾能力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938290.md#1">医改遭抗议 中共医保局首次回应“钱哪去了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937630.md#1">打破香港影史纪录 《毒舌大状》本土票房破亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938159.md#1">《铃芽之旅》影评：拯救日本 这回要靠“锁门”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938496.md#1">新海诚《铃芽之旅》背景灵感 传达311大震灾心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939296.md#1">韩宜邦向林萱瑜求婚成功 获杨祐宁等艺人助攻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937891.md#1">日喜剧泰斗笑福亭笑瓶骤逝 主动脉剥离致死率高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921769.md#1">霹雳果的7大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937203.md#1">5种好种好用的香药草 增强免疫抗病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938208.md#1">身高较矮可能活比较久？ 专家解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937891.md#1">日喜剧泰斗笑福亭笑瓶骤逝 主动脉剥离致死率高</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063380.md#1">【十字路口】郭台铭参选总统 泄台湾自保妙招？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062960.md#1">【热点互动】美中启动出口管制对话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062953.md#1">【新唐人快报】疫情又来了 走了很多年轻人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061791.md#1">曾庆红家族企业花样年披露违约负债439亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061857.md#1">国务院部门发新提议 分析：与习想法相左</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061593.md#1">中国两个月近200万人染疫亡？分析：冰山一角</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/10/n9716291.htm">香港美容业促分开规管医疗及美容仪器</a></p><hr>
