--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063534.md#1">涉贿赂腐败 前议员雷德利-托马斯获刑42个月</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063441.md#1">议员：美国人不知不觉资助了中共 必须停止</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063424.md#1">拜登政府公布医保谈判的首批10种处方药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063445.md#1">辩论会表态支持川普时显犹豫 德桑蒂斯解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063442.md#1">兰伯特有望出任美国务院中国事务负责人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398576.md#1" target="_blank">国际人权组织东亚负责人：中共是邪恶的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
